--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
         </nav>
 </header>
 <body> 
+  <div class="board-game">
+    <div class="screen">
+      <h2 class="ready-txt"></h2>
+      <button class="play-btn"></button>
+      <button class="timer"></button>
+    </div>
+    
+      <button class="board-btns">done</button>
+      <button class="board-btns">skip</button>
+      <button class="board-btns">cancel</button> 
+    </div>
 
+  </div>
     
 
 
