--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/settings.css">
-    <link rel="stylesheet" href="styleDraw.css">
+    
     <title>ComiMic Mobile</title>
 </head>
 <header> 
@@ -113,9 +113,9 @@
 <body> 
   
       <h1>Ready?</h1>
-      <p id="result"></p>
-      <button id="btn">PLAY</button>
-      <button id ="btnrestart">RESTART</button>
+      <p id="resultGame"></p>
+      <button id="btnPlay">PLAY</button>
+      <button id ="btnRestart">RESTART</button>
       
   
     <script src="./script.js"></script>
