--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/settings.css">
+    <link rel="stylesheet" href="css/list.css">
    <!--  <link rel="stylesheet" href="styleDraw.css"> -->
     <title>ComiMic Mobile</title>
 </head>
