--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <header class="main panel red">
                     <div class="inner">
                       <div class="left">
-                        <h1 class="big">¡ComiMic!</h1>
+                        <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684000989/random/comimic_kk7ny1.svg">
                        
                       </div>
                       <div class="right">
@@ -21,7 +21,7 @@
                       </div>
                     </div>
                   </header>
-              <img src="./assets/settingsIcon.png"><li><a>Settings</a></li> 
+              <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684000989/random/setting_img_fgbsws.svg"><li><a>Settings</a></li> 
            
             </div>
         </nav>
