style limpio y slider mejorado

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <img
                 id="btn-settings-image"
                 src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684001574/random/Group_33_oerzsh.png"
-              />
+              /> 
             </button>
           </li>
         </ul>
@@ -164,9 +164,8 @@
         <button class="timer"></button>
       </div>
 
-      <button class="board-btns">done</button>
-      <button class="board-btns">skip</button>
-      <button class="board-btns">cancel</button>
+      <button class="board-btns">Cancel</button>
+      <button class="board-btns">Next</button>
     </div>
 
     <!------------ FOOTER----------->
