list stylings adapted, x button added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Font awesome script link -->
+    <script src="https://kit.fontawesome.com/2e08298666.js" crossorigin="anonymous"></script>
     <!-- Social media footer -->
     <link
       rel="stylesheet"
@@ -63,7 +65,7 @@
             <!-- THE MODAL CONTENT -->
             <div class="modal-content">
               <div class="close-icon">
-                <img class="close-x" src="" alt="" />
+                <i class="fa-solid fa-xmark fa-md" style="color: #000000;"></i>
               </div>
               <h2>Settings</h2>
               <ol>
