update header footer

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
           <li class="logo-comimic">
             <img
               id="logo-comimic"
-              src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684000989/random/comimic_kk7ny1.svg"
+              src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/logo-comimic_bzzpo4.svg"
             />
           </li>
           <li class="settings-btn">
             <button type="button" id="btn-settings" title="Settings">
               <img
                 id="btn-settings-image"
-                src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684001574/random/Group_33_oerzsh.png"
+                src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/setting-icon_oqe0ii.svg"
               /> 
             </button>
           </li>
@@ -171,13 +171,16 @@
     <!------------ FOOTER----------->
     <footer>
       <div class="foot-container">
-        <div class="copyright">
-          <p>&copy; COMIMIC DIGITAL 2023</p>
+        <div class="logo-footer">
+          <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/COMIMIC_xyzabi.svg">
         </div>
         <div class="social-media">
           <a href="#"><i class="fab fa-twitter" title="twitter"></i></a>
           <a href="#"><i class="fab fa-instagram" title="instagram"></i></a>
           <a href="#"><i class="fab fa-facebook" title="Facebook"></i></a>
+        </div>
+        <div class="copyright">
+          <p>&copy; COMIMIC DIGITAL 2023</p>
         </div>
       </div>
     </footer>
