--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       type="font/ttf"
       crossorigin="anonymous"
     />
+
+    <link rel="icon" href="./assets/images/Cc.png" type="image/png">
     <title>Comimic</title>
   </head>
 
