--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
       crossorigin="anonymous"
     />
 
-    <link rel="icon" href="./assets/images/Cc.png" type="image/png">
+    <link rel="icon" href="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684253177/random/Group_68_v0llbo.png" type="image/png">
     <title>Comimic</title>
   </head>
-
   <header class="main panel red">
     <nav>
       <div class="nav">
