--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <!-- HEADER DESKTOP -->
     <div class="nav-desktop">
       <nav>
-        <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/setting-icon_oqe0ii.svg" alt="logo">
-        <ul class="navigation">
+        <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/logo-comimic_bzzpo4.svg" alt="logo">
+        <ul class="navigation-desk">
           <li><a href="#">Settings</a></li>
           <li><a href="#">Ruleset</a></li>
         </ul>
