ana's timer sounds

--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
           <div class="timerGame">
               <div class="timer" id="timer">02:00</div>
               <button id="startTimer">Start Timer</button>
+              <!-- AUDIO FILES -->
+              <audio id="audio" autoplay loop src="./assets/sonidos/clock-ticking-83775.mp3"></audio>
+              <audio id="alarm" autoplay src="./assets/sonidos/clock-alarm-8761 (mp3cut.net).mp3"></audio>
+
           </div>
           <div class="cloudResult displayGame">
               <p id="resultGame"></p>
