files that have been ajusted: index.html (script order), BoardGame.js (btn next and finish), Board timer fixed(pause sound when you click finish the game), script.js(we can remove the starter function)

--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="javascript/boardGame.js"></script>
-    <script type="module" src="javascript/boardTimer.js"></script>
+    <script type="module" src="/javascript/boardTimer.js"></script>
+    <script type="module" src="/javascript/boardGame.js"></script>
     <script type="module" src="./javascript/list.js"></script>
     <script type="module" src="./javascript/script.js"></script>
     <script type="module" src="./javascript/settings.js"></script>
