--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
           <button for="btn-nav" class="hamb-btn">
             <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684248988/random/btn-hamb_spoto8.svg" alt="menu">
           </button>
-<!--           <input type="checkbox" id="btn-nav"> -->
           <nav class="header-nav" id="header-nav">
             <ul class="header-container navigation">
               <li class="settings-btn">
@@ -68,8 +67,12 @@
       <!-- HEADER DESKTOP -->
     <div class="nav-desktop">
       <nav>
-        <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/setting-icon_oqe0ii.svg" alt="logo">
-        <ul class="header-container navigation">
+        <a href="index.html" id="btn-logo"><img
+          class="logo-comimic"
+          id="logo-comimic"
+          src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/logo-comimic_bzzpo4.svg" alt="logo"/>
+        </a>
+       <ul class="header-container navigation">
           <li class="settings-btn">
             <button type="button" id="btn-settings" title="Settings">Settings</button>
           </li>
@@ -77,7 +80,6 @@
             <button type="button" id="btn-ruleset" title="Ruleset">Ruleset</button>
           </li>
         </ul>
-
     </div>
 
       <!-- SECTION RULESET -->
