--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
               <div class="timer" id="timer">02:00</div>
               <button id="startTimer">Start Timer</button>
               <!-- AUDIO FILES -->
-              <audio id="audio" autoplay loop src="./assets/sonidos/clock-ticking-83775.mp3"></audio>
-              <audio id="alarm" autoplay src="./assets/sonidos/clock-alarm-8761 (mp3cut.net).mp3"></audio>
+              <audio id="audio"  loop src="./assets/sonidos/clock-ticking-83775.mp3"></audio>
+              <audio id="alarm"  src="./assets/sonidos/clock-alarm-8761 (mp3cut.net).mp3"></audio>
 
           </div>
           <div class="cloudResult displayGame">
