desktop settings and ruleset fixed

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
         </a>
        <ul class="header-container navigation">
           <li class="settings-btn">
-            <button type="button" id="btn-settings" title="Settings">Settings</button>
+            <button type="button" id="btn-settings-2" title="Settings">Settings</button>
           </li>
           <li class="ruleset-btn">
-            <button type="button" id="btn-ruleset" title="Ruleset">Ruleset</button>
+            <button type="button" id="btn-ruleset-2" title="Ruleset">Ruleset</button>
           </li>
         </ul>
     </div>
