css button game + js boardtimer sound

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
               <img class="cloudGame" alt="cloud display game board" src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/bubble-cloud_zn8adb.svg">
           </div>
           <div class="game-btn board-btns">
-              <button>FINISH</button>
-              <button>NEXT</button>
+              <button id="finish-btn">FINISH</button>
+              <button id="next-btn">NEXT</button>
           </div>
       </container>
 
