boradgame css desktop

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
               <spam id="play-txt">PLAY!</spam></h2> 
 
           <div class="cloudResult">
-              <p>Press the button to start</p>
+              <p>Press the red button<br> to <span>start</span>!</p>
               <img class="cloudGame" alt="cloud display game board" src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/bubble-cloud_zn8adb.svg">
           </div>
           <button id="btnPlay" class="ready-btn btnSound"><img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/ready-btn_syaytk.svg" alt="already button"></button>
@@ -247,7 +247,7 @@
           <!-- TIMER -->
           <div class="timerGame">
               <div class="timer" id="timer">02:00</div>
-              <button class="btnSound" id="startTimer">Start Timer</button>
+              <button class="btnSound" id="startTimer">Start Time</button>
               <!-- AUDIO FILES -->
               <audio id="audio"  loop src="./assets/sonidos/clock-ticking-83775.mp3"></audio>
               <audio id="alarm"  src="./assets/sonidos/clock-alarm-8761 (mp3cut.net).mp3"></audio>
@@ -258,8 +258,8 @@
               <img class="cloudGame" alt="cloud display game board" src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/bubble-cloud_zn8adb.svg">
           </div>
           <div class="game-btn board-btns">
-              <button class="btnSound" id="finish-btn">FINISH</button>
-              <button class="btnSound" id="next-btn">NEXT</button>
+              <button class="btnSound" id="finish-btn">Finish</button>
+              <button class="btnSound" id="next-btn">Next</button>
           </div>
       </container>
 
