--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ruleset.css">
-    <link rel="stylesheet" href="css/settings.css">
-    <link rel="stylesheet" href="css/list.css">
+    <link rel="stylesheet" href="css/generalStyle.css">
+    <link rel="stylesheet" href="css/rulesetModal.css">
+    <link rel="stylesheet" href="css/settingsModal.css">
+    <link rel="stylesheet" href="css/mimicList.css">
     <link rel="stylesheet" href="css/boardGame.css">
     <link rel="stylesheet" href="css/slider.css">
     <!-- Preload Fonts -->
@@ -280,13 +280,13 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="/javascript/soundBtn.js"></script>
-    <script type="module" src="/javascript/boardTimer.js"></script>
-    <script type="module" src="/javascript/boardGame.js"></script>
-    <script type="module" src="./javascript/list.js"></script>
-    <script type="module" src="./javascript/script.js"></script>
-    <script type="module" src="./javascript/settings.js"></script>
-    <script type="module" src="javascript/ruleset.js"></script>
-    <script type="module" src="/javascript/header.js"></script>
+    <script type="module" src="./javascript/soundBtn.js"></script>
+    <script type="module" src="./javascript/boardTimer.js"></script>
+    <script type="module" src="./javascript/boardGame.js"></script>
+    <script type="module" src="./javascript/mimicListUpdates.js"></script>
+    <script type="module" src="./javascript/gameEngine.js"></script>
+    <script type="module" src="./javascript/settingsModals.js"></script>
+    <script type="module" src="./javascript/rulesetModals.js"></script>
+    <script type="module" src="./javascript/headerMenu.js"></script>
   </body>
 </html>
