--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <a href="index.html" id="btn-logo"><img
           class="logo-comimic"
           id="logo-comimic"
-          src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/logo-comimic_bzzpo4.svg" alt="logo"/>
+          src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/logo-comimic_bzzpo4.svg" alt="logo-comimic"/>
         </a>
        <ul class="header-container navigation">
           <li class="settings-btn">
@@ -255,7 +255,7 @@
           </div>
           <div class="cloudResult displayGame">
               <p id="resultGame"></p>
-              <img class="cloudGame" alt="cloud display game board" src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/bubble-cloud_zn8adb.svg">
+              <img class="cloudGame" alt="cloud display game board" src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/bubble-cloud_zn8adb.svg" >
           </div>
           <div class="game-btn board-btns">
               <button class="btnSound" id="finish-btn">Finish</button>
@@ -268,7 +268,7 @@
     <footer>
       <div class="foot-container">
         <div class="logo-footer">
-          <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/COMIMIC_xyzabi.svg">
+          <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684164814/random/icons/COMIMIC_xyzabi.svg" alt="logo-comimic">
         </div>
         <div class="social-media">
           <a href="#"><i class="fab fa-twitter" title="twitter"></i></a>
