--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <link rel="icon" href="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684253177/random/Group_68_v0llbo.png" type="image/png">
     <title>Comimic</title>
   </head>
-  <audio id="buttonSound">
-    <source src="/assets/sonidos/mixkit-arcade-game-jump-coin-216.wav" type="audio/mpeg">
-  </audio>
+ 
 
   <body>
-    
+    <audio id="buttonSound">
+      <source src="/assets/sonidos/mixkit-arcade-game-jump-coin-216.wav" type="audio/mpeg">
+    </audio>
   <header class="main panel red">
     <!-- <div class="nav"> --> <!-- we can delete this div maybe -->
 
@@ -230,8 +230,8 @@
 
       <!-- READY DISPLAY -->
       <div class="readyDisplay displayGame">
-          <h2><spam id="lets-txt">LET'S</spam><br>
-              <spam id="play-txt">PLAY!</spam></h2> 
+          <h2><span id="lets-txt">LET'S</span><br>
+              <span id="play-txt">PLAY!</span></h2> 
 
           <div class="cloudResult">
               <p>Press the red button<br> to <span>start</span>!</p>
@@ -262,7 +262,7 @@
       </div>
 
   </section>
-    <!------------ FOOTER----------->
+    <!----------- FOOTER----------->
     <footer>
       <div class="foot-container">
         <div class="logo-footer">
