--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <body>
     <audio id="buttonSound">
-      <source src="/assets/sonidos/mixkit-arcade-game-jump-coin-216.wav" type="audio/mpeg">
+      <source src="/assets/sonidos/sound-button.mp3" type="audio/mpeg">
     </audio>
   <header class="main panel red">
     <!-- <div class="nav"> --> <!-- we can delete this div maybe -->
