--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <!-- Preload Fonts -->
     <link
       rel="preload"
-      href="/assets/fonts/Bangers-Regular.ttf"
+      href="./assets/fonts/Bangers-Regular.ttf"
       as="font"
       type="font/ttf"
       crossorigin="anonymous"
     >
     <link
       rel="preload"
-      href="/assets/fonts/HappyMonkey-Regular.ttf"
+      href="./assets/fonts/HappyMonkey-Regular.ttf"
       as="font"
       type="font/ttf"
       crossorigin="anonymous"
@@ -42,7 +42,7 @@
 
   <body>
     <audio id="buttonSound">
-      <source src="/assets/sonidos/sound-button.mp3" type="audio/mpeg">
+      <source src="./assets/sonidos/sound-button.mp3" type="audio/mpeg">
     </audio>
   <header class="main panel red">
     <!-- <div class="nav"> --> <!-- we can delete this div maybe -->
