slider 2 and 5 fixed

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                   <input type="radio" name="ss2" id="ss2-item-2" class="slideshow--bullet">
                   <div class="slideshow--item slideshow--item2">
                       <div class="img2">
-                      <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684251726/random/img%20comic/02_yxluif.svg" alt="instruction2">
+                      <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684532344/random/02-r02_q9dby8.svg" alt="instruction2">
                       </div>
                       <label for="ss2-item-1" class="slideshow--nav slideshow--nav-previous">Go to slide 1</label>
                       <label for="ss2-item-3" class="slideshow--nav slideshow--nav-next">Go to slide 3</label>
@@ -206,7 +206,7 @@
                   <input type="radio" name="ss2" id="ss2-item-5" class="slideshow--bullet">
                   <div class="slideshow--item slideshow--item5 ">
                       <div class="img5">
-                      <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684251726/random/img%20comic/05_gqghys.svg" alt="instruction5">
+                      <img src="https://res.cloudinary.com/dcwt8jbja/image/upload/v1684532589/random/05-ok_odnokk.svg" alt="instruction5">
                       </div>
                       
                       <label for="ss2-item-4" class="slideshow--nav slideshow--nav-previous">Go to slide 4</label>
